--- a/app/src/main/res/layout/leads_item.xml
+++ b/app/src/main/res/layout/leads_item.xml
@@ -14,6 +14,8 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:id="@+id/lead_name"/>
         <TextView
             android:layout_width="0dp"
