animations working even more intuitively

--- a/app/src/main/res/layout/free_leads_item.xml
+++ b/app/src/main/res/layout/free_leads_item.xml
@@ -40,7 +40,7 @@
                 android:singleLine="true"
                 android:id="@+id/freelead_time_left"/>
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:id="@+id/freelead_downarrow"
