--- a/app/src/main/res/layout/fragment_lead_details.xml
+++ b/app/src/main/res/layout/fragment_lead_details.xml
@@ -21,6 +21,7 @@
             android:textSize="20sp" />
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -47,6 +48,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -93,6 +95,7 @@
         <!--</LinearLayout>-->
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -119,6 +122,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -145,6 +149,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -196,6 +201,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -256,6 +262,7 @@
             android:textSize="20sp" />
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -282,6 +289,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -308,6 +316,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -338,6 +347,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -368,6 +378,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -407,6 +418,7 @@
             android:textSize="20sp" />
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -433,6 +445,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -459,6 +472,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -485,6 +499,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -520,6 +535,7 @@
             android:textSize="20sp" />
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -546,6 +562,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -572,6 +589,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -598,6 +616,7 @@
             android:background="@color/colorAccent"/>
 
         <LinearLayout
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
