--- a/app/src/main/res/layout/free_leads_item.xml
+++ b/app/src/main/res/layout/free_leads_item.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="6dp"
     android:orientation="vertical"
     android:id="@+id/freelead_container">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="6dp"
         android:id="@+id/freelead_visible_layout">
         <TextView
             android:layout_width="0dp"
@@ -40,7 +40,7 @@
                 android:singleLine="true"
                 android:id="@+id/freelead_time_left"/>
             <ImageButton
-                android:layout_width="wrap_content"
+                android:layout_width="36dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:id="@+id/freelead_downarrow"
